--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@
         
     <!--HEADER SECTION-->    
         <div class=" flex flex-col items-center justify-center mt-12">
-          <h1 class="mb-4 text-4xl font-extrabold text-dark-grey-900 text-center"> Elevate Your Banking with Cache</h1>
-          <p class="text-lg text-center w-7/12 text-grey-700"> We merge cutting-edge banking with a deep understanding of a software developers' needs. Experience tailored financial solutions, advanced security, and tech-focused designed just for you.
+          <h1 class="mb-4 text-3xl lg:text-4xl font-extrabold text-dark-grey-900 text-center"> Elevate Your Banking with Cache</h1>
+          <p class="text-lg text-center lg:w-7/12 text-grey-700"> We merge cutting-edge banking with a deep understanding of a software developers' needs. Experience tailored financial solutions, advanced security, and tech-focused designed just for you.
       </p>
      </div>
         <!--END OF HEADER SECTION-->
@@ -283,9 +283,19 @@
     </div>
 
  
-    <!--COMPONENT 4-->
+    <!--COMPONENT 4: STATS AND GETTING STARTED-->
+    <!--STATS-->
     <div class="w-full">
-        <!-- Wide full-width container for additional content -->
+        <div class="container flex flex-col items-center gap-16 mx-auto my-32">
+          <div class="grid w-full grid-cols-1 lg:grid-cols-4 md:grid-cols-2 gap-y-8">
+    <!--STATISTIC BLOCKS-->
+          <div class="flex flex-col items-center">
+            <h3 class="text-5xl font-extrabold leading-tight text-center text-dark-grey-900"><span id="countto1" countto="250">250</span>+</h3>
+            <p class="text-base font-medium leading-7 text-center text-dark-grey-600"> Hours Saved Sitting In The Bank</p>
+        </div>
+ 
+           </div>
+        </div>
     </div>
 
     <!--END OF CARD SECTION -->
