--- a/index.html
+++ b/index.html
@@ -315,17 +315,44 @@
    <div class="container flex flex-col items-center gap-16 mx-auto my-32">
      <div class="grid w-full grid-cols-1 gap-32 lg:grid-cols-2">
         <div class="bg-cover bg-center hidden lg:block rounded-3xl">
+            <img src="assets/component-4/getting-started.png">
         </div>
     <div class="flex flex-col gap-16">
         <div class="flex flex-col gap-2 text-center md:text-start">
             <h2 class="text-3xl font-extrabold md:text-4xl lg:text-5xl text-dark-grey-900 ">How Cache Works?</h2>
-            <p class="text-base font-medium leading-7 text-dark-grey-600"><span style="color: rgb(55 , 65, 81);font-family: 'Sohne, Tahoma, Geneva, Verdana, sans-serif;"></span></p>
+            <p class="text-base font-medium leading-7 text-dark-grey-600"><span style="color: rgb(55 , 65, 81);font-family: 'Sohne, Tahoma, Geneva, Verdana, sans-serif;"></span>Cache Bank Simplifies sign-up with a user-friendly website, streamlined account options, and an efficient verification process, making banking accessible and hassle-free for developers.</p>
         </div>
-
+        <div class="grid w-full grid-cols-1 md:grid-cols-2 gap-y-16 gap-x-10">
+            <div class="flex flex-col items-start gap-1">
+                <div class="flex items-center justify-center w-12 h-12 rounded-full mb-2 bg-green-500">
+                    <span class="text-base font-bold leading-7 text-white">1</span>
+                </div>
+                <h3 class="text-base font-bold leading-tight text-dark-grey-900">Visit Cache Bank Website</h3>
+                <p class="text-base font-medium leading-7 text-dark-grey-600">Go to Cache Bank, click "Sign-Up" or "Open an Account.</p>
+             </div>
+        <div class="flex flex-col items-start gap-1">
+                <div class="flex items-center justify-center w-12 h-12 rounded-full mb-2 bg-pink-500">
+                    <span class="text-base font-bold leading-7 text-white">2</span>
+                </div>
+                <h4 class="text-base font-bold leading-tight text-dark-grey-900">Choose Account Type</h4>
+                <p class="text-base font-medium leading-7 text-dark-grey-600">Select from checking, savings, or developer-specific accounts.</p>
+             </div>
+             <div class="flex flex-col items-start gap-1">
+                <div class="flex items-center justify-center w-12 h-12 rounded-full mb-2 bg-pink-500">
+                    <span class="text-base font-bold leading-7 text-white">3</span>
+                </div>
+                <h5 class="text-base font-bold leading-tight text-dark-grey-900">Provide Personal Information</h5>
+                <p class="text-base font-medium leading-7 text-dark-grey-600">Complete the form with your details and identification for security.</p>
+             </div>
+             <div class="flex flex-col items-start gap-1">
+                <div class="flex items-center justify-center w-12 h-12 rounded-full mb-2 bg-green-500">
+                    <span class="text-base font-bold leading-7 text-white">4</span>
+                </div>
+                <h6 class="text-base font-bold leading-tight text-dark-grey-900">Verify and Submit</h6>
+                <p class="text-base font-medium leading-7 text-dark-grey-600">Check your information, agree to terms, and submit for account approval.</p>
+             </div>
         
-
-     
-
+           </div>
          </div>
       </div>
    </div>
@@ -351,3 +378,4 @@
     <script src="https://cdn.jsdelivr.net/gh/Loopple/loopple-public-assets@main/motion-tailwind/scripts/maps.js"></script>
     <script src="./assets/js/loopple/loopple.js"></script>
 </body>
+
