--- a/index.html
+++ b/index.html
@@ -405,6 +405,7 @@
 <!-- FOOTER-->
   <div class="w-full bg-green-500 "> 
     <div class="container flex flex-col mx-auto">
+        <div class="flex flex-col items-center w-full my-20">
         <div class="flex flex-col items-center gap-6 mb-8 ">
             <!--SOCIALS-->
             <div class="flex items-center gap-8">
@@ -447,7 +448,10 @@
                 </a>
             </div>
             <!--COPYRIGHT-->
-            <div></div>
+            <div class="flex items-center">
+                <p class="text-base font-normal leading-7 text-center">2024 Cache Bank. All Rights Reserved</p>
+            </div>
+        </div>
         </div>
     </div>
  </div>
