--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
                 <img class="h-8" src="assets/component-1/navigation/cache-bank-logo.png">
             </div>
             <div class="hidden md:flex items-center justify-between text-black gap-12">
-                <a class="text-sm font-normal text-dark-grey-700 hover:text-dark-grey-900" href="">Product</a>
-                <a class="text-sm font-normal text-dark-grey-700 hover:text-dark-grey-900" href="">Features</a>
-                <a class="text-sm font-normal text-dark-grey-700 hover:text-dark-grey-900" href="">Get Started</a>
-                <a class="text-sm font-normal text-dark-grey-700 hover:text-dark-grey-900" href="">Contact</a>
+                <a class="text-sm font-normal text-dark-grey-700 hover:text-dark-grey-900" href="javascript:void(0)">Product</a>
+                <a class="text-sm font-normal text-dark-grey-700 hover:text-dark-grey-900" href="javascript:void(0)">Features</a>
+                <a class="text-sm font-normal text-dark-grey-700 hover:text-dark-grey-900" href="javascript:void(0)">Get Started</a>
+                <a class="text-sm font-normal text-dark-grey-700 hover:text-dark-grey-900" href="javascript:void(0)">Contact</a>
             </div>
             <div class="hidden gap-8 p-4 items-center md:flex ">
                 <button class="text-sm font-normal text-dark-grey-900 hover:text-dark-grey-900">Log In</button>
