--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </defs>
           </svg>
             </button>
-            <div class="absolute hidden md:hidden flex flex-col items-start justify-center w-full overflow-hidden gap-3 bg-white max-h-screen top-full px-4 py-8 shadow-main" id="mobile-menu">
+            <div class="absolute hidden md:hidden flex-col items-start justify-center w-full overflow-hidden gap-3 bg-white max-h-screen top-full px-4 py-8 shadow-main" id="mobile-menu">
 
                     <a class="text-sm font-normal text-dark-grey-700 hover:text-dark-grey-900" href="">Product</a>
                     <a class="text-sm font-normal text-dark-grey-700 hover:text-dark-grey-900" href="">Features</a>
